--- a/cms/.gitignore
+++ b/cms/.gitignore
@@ -12,4 +12,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 
-resources/views/admin_panel/auth_old
+.my.cnf.17061
+.my.output.17061
+.mysql.17061
